# Snitch

./: .gitignore  CLAUDE.md
backend/: .env.example  .gitignore  API_ENDPOINTS.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  connect.py  payments.py  sessions.py  stakes.py  users.py  webhooks.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  session.py  stake.py  user.py
backend/app/schemas/: auth.py  payments.py  session.py  stake.py  user.py
backend/app/services/: session_events.py  session_service.py  stake_events.py  stake_service.py  stripe_service.py
chromeExtension/: background.js  blocked.html  config.example.js  content.js  manifest.json  overlay.js  popup.css  popup.html  popup.js
discord/: .env.example  bot.py  pyproject.toml
discord/cogs/: auth.py  general.py  operation.py
frontend/snitch/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/snitch/src/: App.tsx  index.css  main.tsx  types.ts
frontend/snitch/src/api/: client.ts
frontend/snitch/src/components/: StripeCardForm.tsx
frontend/snitch/src/components/atoms/: Button.tsx  Card.tsx  Chip.tsx  ProgressBar.tsx  SectionDivider.tsx
frontend/snitch/src/components/screens/: AuthScreen.tsx  DistractionMonitor.tsx  FocusDashboard.tsx  (+4 more)
frontend/snitch/src/hooks/: useCameraMonitor.ts  useDistractionDetection.ts  useToken.ts  useVoiceCommand.ts
frontend/snitch/src/utils/: distractionAnalyzer.ts
frontend/snitch/src/workers/: nlpWorker.ts
